add dist to root

--- a/index.html
+++ b/index.html
@@ -5,5 +5,5 @@
        r=n.getElementsByTagName(g)[0],a.src=u,r.parentNode.insertBefore(a,r)
        }(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
-       ga('create', 'UA-XXXXX-X');
+       ga('create', 'UA-51264551-3');
        ga('send', 'pageview');</script> <script src="scripts/vendor.ed71e09a.js"></script> <script src="scripts/scripts.d5cca006.js"></script> </body> </html>
