--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html> <html> <head> <base href="/lolrandomdraft/"> <meta charset="utf-8"> <title></title> <meta name="description" content=""> <meta name="viewport" content="width=device-width"> <!-- Place favicon.ico and apple-touch-icon.png in the root directory --> <link rel="stylesheet" href="lolrandomdraft/styles/vendor.576df346.css"> <link rel="stylesheet" href="lolrandomdraft/styles/main.aa39b6ab.css"> </head> <body ng-app="lolrdApp"> <!--[if lte IE 8]>
+<!doctype html> <html> <head> <base href="/lolrandomdraft/"> <meta charset="utf-8"> <title></title> <meta name="description" content=""> <meta name="viewport" content="width=device-width"> <!-- Place favicon.ico and apple-touch-icon.png in the root directory --> <link rel="stylesheet" href="styles/vendor.576df346.css"> <link rel="stylesheet" href="styles/main.aa39b6ab.css"> </head> <body ng-app="lolrdApp"> <!--[if lte IE 8]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]--> <!-- Add your site or application content here --> <div ng-view=""></div> <!-- Google Analytics: change UA-XXXXX-X to be your site's ID --> <script>!function(A,n,g,u,l,a,r){A.GoogleAnalyticsObject=l,A[l]=A[l]||function(){
        (A[l].q=A[l].q||[]).push(arguments)},A[l].l=+new Date,a=n.createElement(g),
@@ -6,4 +6,4 @@
        }(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
        ga('create', 'UA-51264551-3');
-       ga('send', 'pageview');</script> <script src="lolrandomdraft/scripts/vendor.ed71e09a.js"></script> <script src="lolrandomdraft/scripts/scripts.d5cca006.js"></script> </body> </html>
+       ga('send', 'pageview');</script> <script src="scripts/vendor.ed71e09a.js"></script> <script src="scripts/scripts.d5cca006.js"></script> </body> </html>
